Fix CSS styles for filter icon in LayerItemView
- Add class `layer-item__filter-icon` that includes the same base styles as the `layer-item__visibility-toggle` class (the eye toggle icon).
- It's necessary to use a separate class for the filter icon to avoid inheriting styles applied to that class when the layer becomes visible ot invisible, e.g. `.layer-item--shown .layer-item__visibility-toggle`.
- Use `span` instead of `button` for the filter icon since it is not a button but an icon that toggles the visibility of the filter view (semantic HTML).
- Because the filter icon has a distinctive class, we can use a more simple CSS selector to find it in the `toggleFilterIconVisibility` method.

Issue #1770

--- a/src/css/map-view.css
+++ b/src/css/map-view.css
@@ -846,7 +846,8 @@ represents 1 unit of the given distance measurement. */
   padding: 0 1.5rem;
   cursor: pointer;
 
-  .layer-item__visibility-toggle {
+  .layer-item__visibility-toggle,
+  .layer-item__filter-icon {
     opacity: var(--map-no-brightness-or-opacity-tweaks, 0.85);
     padding: 0;
     margin: 0.25rem;
@@ -909,12 +910,6 @@ represents 1 unit of the given distance measurement. */
           );
         }
       }
-
-      .icon-filter--active {
-        fill: transparent;
-        color: var(--portal-col-neutral-4, currentColor);
-        background-color: transparent;
-      }
     }
 
     .layer-item__settings {
@@ -922,6 +917,10 @@ represents 1 unit of the given distance measurement. */
       display: flex;
       border: 1px solid var(--portal-col-primary-2);
     }
+  }
+
+  .layer-item__filter-icon--active {
+    color: var(--portal-col-primary-6);
   }
 
   .layer-item__settings {
